# kursovaya6

./: .env  .env_sample  .gitignore  README.md  pyproject.toml
blog/: admin.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_creation_date.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  home_index.html
config/: settings.py  urls.py
main/: admin.py  form.py  models.py  send_mailing.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_initial.py
main/templates/main/: base.html  base2.html  client_confirm_delete.html  client_detail.html  client_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailing_logs.html
static/css/: bootstrap.min.css
static/js/: bootstrap.min.js  jquery-3.3.1.slim.min.js  popper.min.js
users/: form.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: change_password.html  login.html  register.html  user_confirm_delete.html  user_detail.html  user_form.html  user_list.html
users/templatetags/: media_filters.py  media_tags.py
